split-file工程中增加了通过文件在Hashmap中匹配过滤的功能

--- a/yusys-example/split-file/pom.xml
+++ b/yusys-example/split-file/pom.xml
@@ -20,7 +20,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>cn.com.yusys.yufs.Main</mainClass>
+							<mainClass>cn.com.yusys.yufs.MainFilter</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
